<resources>
    <string name="app_name">Fantasy World</string>
    <string name="create_character">Create Character</string>
    <string name="load_character">Load Character</string>
    <string name="create_name">Name: </string>
    <string name="create_class">Class: </string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="experience_text">Exp:</string>
    <string name="level_text">Level:</string>
    <string name="skills_text">Skills</string>
    <string name="stats_text">Stats</string>
    <string name="casting_text">Casting:</string>
    <string name="evocation_text">Evocation:</string>
    <string name="necromancy_text">Necromancy:</string>
    <string name="divination_text">Divination:</string>
    <string name="player_exists">"A character already exists.</string>
    <string name="clicked_book01">"You found a tome of lost knowledge.</string>
    <string name="xp_value100">+ 100 xp</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>

    <string-array name="classes_array">
        <item>Wizard</item>
        <item>Necromancer</item>
    </string-array>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
