<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="125dp"
        android:layout_marginTop="250dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/create_button"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/create_character" />

        <Button
            android:id="@+id/load_button"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/load_character" />
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sign_in" />
        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sign_out" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>